<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="145dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">

            <ImageView
                android:id="@+id/ImgHaircuts"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:scaleType="fitXY"
                android:src="@drawable/barber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TvHaircuts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/small"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/barberName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ImgHaircuts" />

            <TextView
                android:id="@+id/TvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/small"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ImgHaircuts" />

            <TextView
                android:id="@+id/TvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/small"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/Placeholder"
                android:maxLines="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TvHaircuts" />
</androidx.constraintlayout.widget.ConstraintLayout>
